add metadata description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Hi, my name is Amir Makram, a software developer, born in Alexandria, Egypt in July 1997.
+    I graduated from the faculty of commerce, Alexandria University, Computers and Information systems as my major in May 2019.
+    After finishing my military services, I joined Information Technology Institution (ITI) and graduate at the 3rd top of my class.
+    My major in the ITI is full-stack development using .NET & .NET core frameworks.
+    
+    Since I was a kid and I was fascinated with computers and all things about them, I used Linux since I was eight years old (my first Linux distribution was AdiosOS based on fedora 5) I was just discovered a new horizon.
+    My turning point in my life was in middle school, and I had a school assignment for working with visual basic code, and with my first 'Hello World' line, that was how I knew what I want to do with the rest of my life.
+    Since then, my journey started for finding my passion and what I want to code with; I tried PHP and C. After I select computers and information systems as my major in college, I tried Java, PHP again, R and Python, Python was fun. But when I saw JavaScript and C# and how they are challengeable and missy, I love them.
+    The information technology institution (ITI) helped me to pursue my career after finishing my military services and put me in the way of software development using the latest technologies.
+    ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/x-icon" href="/images/AmirFavIco.png" type="image/png">
