--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     The information technology institution (ITI) helped me to pursue my career after finishing my military services and put me in the way of software development using the latest technologies.
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="_vGQYgsHRxRnStPtNfbLlICsfekDXbRCPbxUPkNgPyc" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/x-icon" href="/images/AmirFavIco.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
