edit Social media section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="social" class="social-me">
         <div class="container">
             <div class="cotact-me-header">
-                <h3>My social media</h3>
+                <h3>My social media & portfolios</h3>
             </div>
             <div class="social-me-body">
                 <div class="social linkedin">
