--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="right-side">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#social">Social</a></li>
+                    <li><a href="#social">Find me</a></li>
                 </ul>
             </div>
         </div>
@@ -94,7 +94,7 @@
     <section id="social" class="social-me">
         <div class="container">
             <div class="cotact-me-header">
-                <h3>My social media & portfolios</h3>
+                <h3>Find me on:</h3>
             </div>
             <div class="social-me-body">
                 <div class="social linkedin">
